codex-tests/snapshots/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Puffin to do anything                                                     "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project                                            "
